# simship

./: CMakeLists.txt  CMakePresets.json
targets/: CMakeLists.txt
targets/ttsim/: CMakeLists.txt
targets/ttsim/include/TT/: logging.h  math.h  model.h  rpr_fom.h  simulation.h  transform.h
targets/ttsim/src/: math.cpp  model.cpp  simulation.cpp  transform.cpp  transform.tests.cpp
targets/ttsimship/: CMakeLists.txt
targets/ttsimship/include/TT/: data.h  model_flight_dynamics.h  model_radar.h
targets/ttsimship/src/: main.cpp  model_radar.tests.cpp
